Wed Feb 25 02:28:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_chomp_bang): coderange may change.
	  [ruby-core:22414]

Wed Feb 25 02:17:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_delete_bang): should recalculate coderange.
	  [ruby-talk:329267]

Wed Feb 25 00:41:21 2009  Akinori MUSHA  <knu@iDaemons.org>

	* class.c (rb_scan_args): Allow specifying the number of trailing
	  mandatory arguments right after the number of optional arguments
	  only if the number of leading mandatory arguments is not omitted.

	* ext/socket/tcpserver.c (tcp_svr_init): Make use of it.

Wed Feb 25 00:28:25 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (rb_file_size): new method added.  [ruby-core:22088]

Wed Feb 25 00:15:15 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/curses/curses.c (curses_colors): new method added.  a patch
	  from Alexander Beisig in [ruby-core:22331].

	* ext/curses/curses.c (curses_color_pairs): ditto.

Wed Feb 25 00:05:13 2009  Akinori MUSHA  <knu@iDaemons.org>

	* class.c (rb_scan_args): Revamp rb_scan_args() to compute the
	  number of required and optional arguments precisely to prepare
	  for a more informative error message.

Tue Feb 24 23:58:52 2009  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_index, rb_ary_rindex): Emit a warning that a
	  given block is unused when an argument is specified.

Tue Feb 24 22:00:37 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (sockaddr_obj): convert fe80:1::1 to fe80::1%1.

Tue Feb 24 19:56:11 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_timestamp): support SCM_BINTIME.

Tue Feb 24 19:45:15 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_timestamp): new method.

Tue Feb 24 19:01:05 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (main): split from exts and makes main program after
	  building exts with miniruby, to get rid of overwriting running